feat: 添加51la统计代码

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     <link rel="source" href="https://qwerty.kaiyi.cool" />
     <link rel="manifest" href="/manifest.json" />
 
+    <script
+      id="LA_COLLECT"
+      src="//sdk.51.la/js-sdk-pro.min.js?id=K0848oHZTusYths3&ck=K0848oHZTusYths3&hashMode=true"
+    />
     <script>
       // Dark mode init
       if (
